--- a/index.html
+++ b/index.html
@@ -2,6 +2,16 @@
 <html>
 	
 	<head>
+		<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-JXZPCGB6GQ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-JXZPCGB6GQ');
+</script>
+
 		<title>Découvret Biarritz</title>
 		<meta charset="utf-8">
 		<link rel="stylesheet" href="css/style.css">
